1.19.0

Upgrade to use Keystone Antelope
Upgrade docker to centos 9 Stream
Upgrade to support python 3.9

1.18.0

Fix: policy.json file from stein for docker (#234)
Fix: modify docker provision script for compatibility with mysql 8.0 (#232)
Upgrade to use Keystone Xena
Upgrade docker to centos 8.4
Upgrade to support python 3.6

1.17.0

Add permissions to allow get all role_assignments of a group in all subservices in one request by any admin domain user
Add openldap-clients dependency and link from /etc/ldap/ldap.conf to etc/ldap/openldap.conf

1.16.0

Return previous login attempts in extra field after a success login attempt

1.15.0

Use 1.6.0 version of SCIM in docker image
Log to access, error and keystone logs to stderr of docker to avoid log to file (#148)

1.14.1

Fix: check if DB is up even if is behind a load balancer

1.14.0

ADD: check if mysql credentials are OK before use it by docker statup scripts
ADD: provision a new user `cep` in default domain
ADD: ensure blacklist users are in expected domain
Fix: do not remove database when its supposed not exists (#212)

1.13.0

ADD: force keystone restart at startup after set configuration (#199)
ADD: log spassword config at startup
ADD: preconfig docker and new vars and doc to configure keystone as SAML IdP
ADD: SPASSWORD_EXTRA_BLACKLIST env var to add extra users to `pwd_user_blacklist` for docker
ADD: Docker healthcheck for keystone API
Fix missed deps (python2-qpid-proton, qpid-proton-c) using epel version 7-14 (#191)
Remove old framework files
Remove some reduntant logs (flask, stevedore, oslo_policy) docker container

1.12.0

Add env var to enable/disable fernet token rotation (#163)
Ensure fenet-keys folder permissions when configured as external volumen (#163)
Upgrade Dockerfile base image from centos7.7.1908 to centos7.9.2009

1.11.0

Remove automigrate spassword inside rpm
Include patch files in RPM builds
Ensure start uwsgi process when new container starts with new data

1.10.0
