@@ -1,3 +1,5 @@
+ADD: allow to define pep password using  KEYSTONE_PEP_PASSWORD env var (#247)
+
 1.19.0
 
 Upgrade to use Keystone Antelope
